// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`возвращает ответ, если есть блок с формой подписки 1`] = `
Object {
  "position": "block",
  "subscribed": false,
  "type": "form",
}
`;

exports[`возвращает ответ, если есть кука 1`] = `
Object {
  "position": "footer",
  "subscribed": true,
  "type": "telegram",
}
`;

exports[`возвращает ответ, если отключена форма подписки 1`] = `
Object {
  "position": "footer",
  "subscribed": false,
  "type": "telegram",
}
`;
